2010-01-24  Israel Herraiz  <isra@herraiz.org>

	* NEWS:

	Release 0.4

2010-01-11  Israel Herraiz  <isra@herraiz.org>

	* pymlstats/datamodel.py:
	* pymlstats/database.py:

	Add UTF-8 support for the database.
	Removed People_ID field. Substituted by email address.

	* pymlstats/analyzer.py:

	Mailbox parser update to Python 2.6 (the previous one is
	deprecated).

	Fixed handling of text attachments and multipart messages

	* pymlstats/version.py:

	Preparing for release 0.4.

2009-12-23  Israel Herraiz  <isra@herraiz.org>

	* pymlstats/database.py:

	Ignore received header when storing messages in the database if it
	is none.

2009-22-12  Israel Herraiz  <isra@herraiz.org>

        * pymlstats/datamodel.py:
        * pymlstats/fileextractor.py:
        * pymlstats/__init__.py:
        * pymlstats/utils.py:
        * pymlstats/htmlparser.py:
        * pymlstats/database.py:
        * pymlstats/main.py:
        * pymlstats/analyzer.py:
        * pymlstats/version.py:
        * setup.py:
        * mlstats:
        * README:

	Update email addresses, contact URLs, and copyright year.

2009-17-12  Israel Herraiz <isra@herraiz.org>

	* pymlstats/analyzer.py:

	Received date is now set using the Unix From line rather than the
	value in the the header.
	Patch sent by Simón Pena Placer <spenap@gmail.com>

2009-04-03  Carlos Garcia Campos  <carlosgc@libresoft.es>

	* pymlstats/main.py:
	* pymlstats/utils.py:

	Add a function to get the home user directory in a platform
	independent way.
	
2009-02-13  Israel Herraiz <herraiz@libresoft.es>

	* mlstats:
	* pymlstats/__init__.py:
	* pymlstats/analyzer.py:
	* pymlstats/database.py:
	* pymlstats/datamodel.py:
	* pymlstats/fileextractor.py:
	* pymlstats/htmlparser.py:
	* pymlstats/main.py:
	* pymlstats/version.py:
	* pymlstats/utils.py:
	* setup.py:

	Moved URL retrieval and compressed files handling to a new module
	called utils.
	Updated copyright info.
	
2009-02-13  Israel Herraiz <herraiz@libresoft.es>
